# bnk4

./: .gitignore  .pre-commit-config.yaml  ANALYSIS_ENGINE_V1 copia.md  ANALYSIS_ENGINE_V1.md  BNK_FUNDATION.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY_SPEC.md  conftest.py  pyproject.toml  skills_codex.md
.github/workflows/: ci.yml  repo-integrity.yml
CHECKS/: README.md  test_validate_repo_integrity.py  validate_contracts.py  validate_repo_integrity.py  validate_threat_model.py
CONTRACTS/: analysis_output.md  auth_context.md  error_response.schema.json  export_sharing.md  export_signing.md  markers_pack.md  precision_contract.schema.json
apps/: README.md
apps/analyzer-api/: .env.example  README.md  api.py  requirements.txt  service.py
apps/analyzer-api/tests/: conftest.py  test_api.py  test_service.py
apps/analyzer-web/: .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
apps/analyzer-web/src/__tests__/: analyze-form.test.tsx  api-client.test.ts  mode-withheld.test.tsx  role-gating.test.tsx
apps/analyzer-web/src/app/: globals.css  layout.tsx  page.tsx
apps/analyzer-web/src/components/: analyze-form.tsx  error-boundary.tsx  theme-toggle.tsx
apps/analyzer-web/src/lib/: api-client.ts  mock-data.ts  utils.ts
apps/analyzer-web/src/types/: api.ts  engine-v1.ts
docs/: ARCHITECTURE.md  DEVELOPMENT.md  ENGINE_V1_CONTRACT.md  PROJECT_STATUS.md  THREAT_MODEL.md
engine/: CONTRACT_V1.md  README.md
engine/aggregation/: README.md
engine/contracts/: README.md  analysis_output.py
engine/core/: config.py  errors.py  output.py
engine/eval/: README.md  __init__.py  eval_types.py  fixtures.csv  loader.py  metrics.py  run_eval.py  runner.py  test_eval_diagnostics.py  test_integration.py  test_loader.py  test_metrics.py  test_runner_bpm_candidates.py
engine/eval/samples/dembow/: dembow__116__Fsharp_minor__fuego.mp3.asd  dembow__119__Dsharp_Major__bocasucia.mp3.asd
engine/eval/samples/drill/: drill__143__Dsharp_minor__ching.mp3.asd  drill__150__Dminor__aboutyou.mp3.asd
engine/eval/samples/jersey/: jersey__138__Eminor__forMe.mp3.asd  jersey__140__Cminor__nogood.mp3.asd
engine/eval/samples/reggaeton/: reggaeton__80__Aminor__preguntandome.mp3.asd  reggaeton__90__GMajor__signals.mp3.asd
engine/features/: README.md  bpm_v1.py  key_mode_v1.py  types.py
engine/ingest/: README.md  __init__.py  decode_wav_v1.py  ingest.py  ingest_v1.py  types.py
engine/observability/: __init__.py  hooks.py
engine/packaging/: README.md  package_output_v1.py
engine/pipeline/: run.py
engine/preprocess/: README.md  bpm_hint_windows_v1.py  preprocess_v1.py
engine/tests/: test_bpm_candidates_v1.py  test_bpm_hint_windows_detail_v1.py  test_bpm_hint_windows_pcm_v1.py  test_bpm_key_mode_gating.py  test_bpm_multiband_runnerup_ambiguity_v1.py  test_bpm_multiband_sanity_v1.py  test_bpm_reportable_policy_function_v1.py  test_bpm_reportable_policy_v1.py  test_bpm_triplet_promotion_v1.py  test_canonical_output.py  test_contract_invariants_v1.py  test_contract_validation.py  test_error_taxonomy_v1.py  test_exception_normalization_v1.py  test_ingest_decode_mp3_v1.py  test_ingest_decode_wav.py  test_ingest_v1.py  test_key_mode_candidates_v1.py  test_lowpass_filter_v1.py  test_observability_v1.py  test_packaging_deep_strip_guest_v1.py  test_packaging_gating_v1.py  test_preprocess_v1.py  test_runner_assert_contract_v1.py  test_runner_contract_e2e.py  test_runner_input_path.py
scripts/: bootstrap_dev.sh  ci-local.sh  ci.sh  fmt.sh  lint.sh
(+19 files in other folders)
