[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bnk-analysis-engine"
version = "0.1.0"
description = "BeetsNKeys (bnk4) analysis engine v1 (contract-first)"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# Placeholders only (no heavy deps yet).
audio = []
dev = []

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*"]
exclude = ["engine.tests*"]
